--- a/docs/versioned_docs/version-1.11.0/api/hooks/keyboard/use-keyboard-handler/index.mdx
+++ b/docs/versioned_docs/version-1.11.0/api/hooks/keyboard/use-keyboard-handler/index.mdx
@@ -86,15 +86,15 @@ export const onStartCode = (
 
 <div className="grid">
   <div className="description-block">
-    <p>
-      This function is called before the keyboard movement starts.{" "}
-      <code>height</code> and <code>progress</code> values will have{" "}
-      <b>destination</b> values, i. e. if keyboard was closed but will appear -
-      these values will have a values like "keyboard is already opened" (
-      <code>progress</code> will be equal to <code>1</code> and{" "}
-      <code>height</code> will have non-zero value).
-    </p>
+    This function is called before the keyboard movement starts.{" "}
+    <code>height</code> and <code>progress</code> values will have{" "}
+    <b>destination</b> values, i. e. if keyboard was closed but will appear -
+    these values will have a values like "keyboard is already opened" (
+    <code>progress</code> will be equal to <code>1</code> and{" "}
+    <code>height</code> will have non-zero value).
+
     <div className="desktop">{onStartCode}</div>
+
   </div>
   <div>
     <img src={require("./start.png").default} />
@@ -121,11 +121,11 @@ export const onMoveCode = (
 
 <div className="grid">
   <div className="description-block">
-    <p>
-      This function will be called every frame when the keyboard changes its
-      position.
-    </p>
+    This function will be called every frame when the keyboard changes its
+    position.
+
     <div className="desktop">{onMoveCode}</div>
+
   </div>
   <div>
     <img src={require("./move.png").default} />
@@ -158,16 +158,16 @@ export const onInteractiveCode = (
 
 <div className="grid">
   <div className="description-block">
-    <p>
-      This function will be called every frame when user changes position of the
-      keyboard by the drag.
-    </p>
-    <p>
+    This function will be called every frame when user changes position of the
+    keyboard by the drag.
+
+    <span>
       If finger is released and keyboard animates to its final destination, then
       the standard <code>onStart</code>/<code>onMove</code>/<code>onEnd</code>{" "}
       lifecycles will be triggered.
-    </p>
+    </span>
     <div className="desktop">{onInteractiveCode}</div>
+
   </div>
   <div>
     <img src={require("./interactive.png").default} />
@@ -200,10 +200,8 @@ export const onEndCode = (
 
 <div className="grid">
   <div className="description-block">
-    <p>
-      This function will be called when the keyboard has completed its movement.
-      The event will contain <b>current</b> keyboard metrics.
-    </p>
+    This function will be called when the keyboard has completed its movement.
+    The event will contain <b>current</b> keyboard metrics.
     <div className="desktop">{onEndCode}</div>
   </div>
   <div>
