fix: unnecessary space

--- a/docs/versioned_docs/version-1.5.0/api/hooks/use-keyboard-handler/index.mdx
+++ b/docs/versioned_docs/version-1.5.0/api/hooks/use-keyboard-handler/index.mdx
@@ -87,8 +87,8 @@ export const onStartCode = (
     This function is called before the keyboard movement starts.{" "}
     <code>height</code> and <code>progress</code> values will have{" "}
     <b>destination</b> values, i. e. if keyboard was closed but will appear -
-    these values will have a values like "keyboard is already opened" (
-    <code>progress</code> will be equal to <code>1</code> and{" "}
+    these values will have a values like "keyboard is already opened"
+    (<code>progress</code> will be equal to <code>1</code> and{" "}
     <code>height</code> will have non-zero value).
 
     <div className="desktop">{onStartCode}</div>
