--- a/docs/versioned_docs/version-1.11.0/api/components/keyboard-toolbar/index.mdx
+++ b/docs/versioned_docs/version-1.11.0/api/components/keyboard-toolbar/index.mdx
@@ -102,6 +102,10 @@ const Icon: KeyboardToolbarProps["icon"] = ({ type }) => {
 <KeyboardToolbar icon={Icon} />;
 ```
 
+### `showArrows`
+
+A boolean prop indicating whether to show `next` and `prev` buttons. Can be useful to set it to `false` if you have only one input and want to show only `Done` button. Default to `true`.
+
 ### `theme`
 
 Prop allowing you to specify the brand colors of your application for `KeyboardToolbar` component. If you want to re-use already platform specific colors you can import `DefaultKeyboardToolbarTheme` object and override colors only necessary colors:
