feat: `KeyboardToolbar` callbacks (#419)
## 📜 Description

Added `onDoneCallback`/`onNextCallback`/`onPrevCallback` functions to
`KeyboardToolbar`.

## 💡 Motivation and Context

It's often needed to customize behavior when buttons are pressed, for
example do a haptic feedback or even play a sound.

Before this PR it wasn't possible to add an action that will be called
whenever user presses a particular button along with the default action.
But in this PR I added it.

Initially I wanted to provide `onNextPress` functions that would
redefine an entire handler. But in this case users will have to go into
source code and understand how `KeyboardToolbar` works under the hood.
Even though it's not difficult it's better to keep such things
internally (and in most cases users will rely on defult behavior - in
case if we need to re-define a behavior I'll add new functions later).

## 📢 Changelog

### Docs

- added docs about new
`onDoneCallback`/`onNextCallback`/`onPrevCallback` callbacks;

### JS

- added `onDoneCallback`/`onNextCallback`/`onPrevCallback`;

## 🤔 How Has This Been Tested?

Tested on Pixel 7 Pro (android 14) and iPhone 11 (iOS 17.4).

## 📸 Screenshots (if appropriate):

There is no way to test haptic visually 😀 

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -102,6 +102,69 @@ const Icon: KeyboardToolbarProps["icon"] = ({ type }) => {
 <KeyboardToolbar icon={Icon} />;
 ```
 
+### `onDoneCallback`
+
+A callback that is called when the user presses the **done** button along with the default action.
+
+```tsx
+import { Platform } from "react-native";
+import { KeyboardToolbar } from "react-native-keyboard-controller";
+import { trigger } from "react-native-haptic-feedback";
+
+const options = {
+  enableVibrateFallback: true,
+  ignoreAndroidSystemSettings: false,
+};
+const haptic = () =>
+  trigger(Platform.OS === "ios" ? "impactLight" : "keyboardTap", options);
+
+// ...
+
+<KeyboardToolbar onDoneCallback={haptic} />;
+```
+
+### `onNextCallback`
+
+A callback that is called when the user presses the **next** button along with the default action.
+
+```tsx
+import { Platform } from "react-native";
+import { KeyboardToolbar } from "react-native-keyboard-controller";
+import { trigger } from "react-native-haptic-feedback";
+
+const options = {
+  enableVibrateFallback: true,
+  ignoreAndroidSystemSettings: false,
+};
+const haptic = () =>
+  trigger(Platform.OS === "ios" ? "impactLight" : "keyboardTap", options);
+
+// ...
+
+<KeyboardToolbar onNextCallback={haptic} />;
+```
+
+### `onPrevCallback`
+
+A callback that is called when the user presses the **previous** button along with the default action.
+
+```tsx
+import { Platform } from "react-native";
+import { KeyboardToolbar } from "react-native-keyboard-controller";
+import { trigger } from "react-native-haptic-feedback";
+
+const options = {
+  enableVibrateFallback: true,
+  ignoreAndroidSystemSettings: false,
+};
+const haptic = () =>
+  trigger(Platform.OS === "ios" ? "impactLight" : "keyboardTap", options);
+
+// ...
+
+<KeyboardToolbar onPrevCallback={haptic} />;
+```
+
 ### `showArrows`
 
 A boolean prop indicating whether to show `next` and `prev` buttons. Can be useful to set it to `false` if you have only one input and want to show only `Done` button. Default to `true`.
