docs: customize width

--- a/docs/docs/api/hooks/input/use-focused-input-handler.mdx
+++ b/docs/docs/api/hooks/input/use-focused-input-handler.mdx
@@ -77,4 +77,4 @@ This handler can be handy when you need to have an access to input on a global l
 
 import Video from "@site/src/components/Video";
 
-<Video src="/video/selection-demo.mov" />
+<Video src="/video/selection-demo.mov" width={60} />
