--- a/docs/docs/api/hooks/input/use-focused-input-handler.mdx
+++ b/docs/docs/api/hooks/input/use-focused-input-handler.mdx
@@ -26,6 +26,9 @@ useFocusedInputHandler(
     onChangeText: ({ text }) => {
       "worklet";
     },
+    onSelectionChange: ({ target, selection }) => {
+      "worklet";
+    },
   },
   [],
 );
@@ -70,4 +73,8 @@ type FocusedInputSelectionChangedEvent = {
 };
 ```
 
-This handler can be handy when you need to have an access to input on a global level (i. e. when you don't have a direct access to your `TextInput`) or if you need to have an access to coordinates of text selection (for example to draw a custom element that follows caret position).
+This handler can be handy when you need to have an access to input on a global level (i. e. when you don't have a direct access to your `TextInput`) or if you need to have an access to coordinates of text selection (for example to draw a custom element that follows caret position):
+
+import Video from "@site/src/components/Video";
+
+<Video src="/video/selection-demo.mov" width={60} />
