docs: updated blogpost

--- a/docs/blog/2024-05-13-release-1-12/index.mdx
+++ b/docs/blog/2024-05-13-release-1-12/index.mdx
@@ -11,6 +11,8 @@ I'm excited to announce the latest release, version 1.12.0, of react-native-keyb
 
 Although this release may not seem monumental, it's significant, and I'm thrilled to share it with you. 😍
 
+The key features of this release are: **bridgeless** support, selection tracking,  enhanced `KeyboardToolbar` component and synchronous `onMove` handler on iOS among other bug fixes and improvements.
+
 <!-- truncate -->
 
 ## Bridgeless support
@@ -64,7 +66,9 @@ With the new release of `react-native-keyboard-controller`, you can now safely r
 
 ## What's next?
 
-This release refines the previous version but introduces crucial improvements that will unlock the full potential of `react-native-keyboard-controller` in future updates:
+This release refines the previous version and at the same time introduces crucial improvements that will unlock the full potential of `react-native-keyboard-controller` in future updates:
 
 - on iOS, we now inject a delegate into `TextInput`, providing greater control over input and keyboard events;
 - the fully synchronous `onMove` handler will enable frame-by-frame keyboard control in the future, particularly when an interactive keyboard offset is implemented. 👀
+
+To stay tuned follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates. Thank you for your support! 😊
