--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
@@ -73,6 +73,10 @@ The distance between keyboard and focused `TextInput` when keyboard is shown. De
 This property is equivalent to [extraHeight](https://github.com/APSL/react-native-keyboard-aware-scroll-view/tree/9eee405f7b3e261faf86a0fc8e495288d91c853e?tab=readme-ov-file#props) from original [react-native-keyboard-aware-scroll-view](https://github.com/APSL/react-native-keyboard-aware-scroll-view) package.
 :::
 
+:::tip
+If you specified `snapOffsets` to your `ScrollView` then `KeyboardAwareScrollView` will automatically respect to this values and actual `bottomOffset` may be bigger (but focused input will be always above the keyboard anyway).
+:::
+
 ### `disableScrollOnKeyboardHide`
 
 Prevents automatic scrolling of the `ScrollView` when the keyboard gets hidden, maintaining the current screen position. Default is `false`.
