docs: fix `KeyboardAware` types in `BottomSheet` integration section

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -205,7 +205,7 @@ BottomSheetKeyboardAwareScrollView.displayName =
   "BottomSheetKeyboardAwareScrollView";
 
 export default BottomSheetKeyboardAwareScrollView as (
-  props: BottomSheetScrollViewProps,
+  props: BottomSheetScrollViewProps & KeyboardAwareScrollViewProps,
 ) => ReturnType<typeof BottomSheetKeyboardAwareScrollView>;
 ```
 
