--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
@@ -205,7 +205,7 @@ BottomSheetKeyboardAwareScrollView.displayName =
   "BottomSheetKeyboardAwareScrollView";
 
 export default BottomSheetKeyboardAwareScrollView as (
-  props: BottomSheetScrollViewProps,
+  props: BottomSheetScrollViewProps & KeyboardAwareScrollViewProps,
 ) => ReturnType<typeof BottomSheetKeyboardAwareScrollView>;
 ```
 
